objects/AcctSeed__Recurring_Account_Payable_Line__c.object
<CustomObject>
    <description>Defines the line level detail of a recurring payable. Aggregation of recurring payable lines constitute a recurring payable.</description>
    <fields>
        <fullName>AcctSeed__Amount2__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Recurring Payable Lines</relationshipLabel>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Recurring Payable Lines</relationshipLabel>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Account_Payable__c</fullName>
        <label>Recurring Payable</label>
        <referenceTo>AcctSeed__Recurring_Account_Payable__c</referenceTo>
        <relationshipName>Recurring_Accounts_Payable_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Amount2__c - AcctSeed__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity x Unit Cost for the Recurring Payable Line</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated based on Sub-Total x Tax Group&apos;s Combined Tax Rate on Recurring Payable Line.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If using native tax functionality, this determines the Combined Tax Rate percentage and the tax GL mappings and is used to calculate the Tax Amount.</inlineHelpText>
        <label>Tax Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Purchase</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales and Purchase</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
        <relationshipLabel>Recurring Payable Lines</relationshipLabel>
        <relationshipName>Recurring_Payable_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <formula>IF(AcctSeed__Sub_Total__c = 0, 0 ,AcctSeed__Tax_Amount__c / AcctSeed__Sub_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax rate percentage used to calculate tax amount.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unit_Cost__c</fullName>
        <inlineHelpText>Product or Service Rate. Up to 6 decimal places.  However if the Total field is directly entered, then Unit Cost is calculated as Total / Quantity. Unit Cost required if Tax Group populated.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <label>Recurring Payable Line</label>
    <nameField>
        <displayFormat>RAPL-{00000}</displayFormat>
        <label>Recurring Payable Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Payable Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>